traversal.snake.Snake.scala.error
Compilation error:
Snake:31: error: type mismatch;
 found   : Unit
 required: Boolean
    setDirection(a:Direction)
                ^